<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/k"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/p"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a"
                android:textSize="24sp" />

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkBox_repeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeats"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/text_result"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="100000" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>